# fCaptcha-rust

./: .gitignore  Cargo.toml  README.md  Rocket.toml  t.bat
data/: DortCap.toml  aaa.json  proxies.txt
hcap_testing/: a.json  check.json  get.json  tfe.json  tfe_req.json
src/: main.rs
src/api/: mod.rs
src/api/customer_api/: mod.rs  user.rs
src/captcha/: mod.rs
src/captcha/arkose_funcaptcha/: mod.rs
src/captcha/arkose_funcaptcha/audio_challenge/: mod.rs
src/captcha/arkose_funcaptcha/bda/: mod.rs  structs.rs
src/captcha/arkose_funcaptcha/bda/firefox/: mod.rs
src/captcha/arkose_funcaptcha/bda/templates/: mod.rs
src/captcha/arkose_funcaptcha/breakers/: jshelper.rs  mod.rs
src/captcha/arkose_funcaptcha/challenge/: hash_thresholds.rs  mod.rs  tile.rs
src/captcha/arkose_funcaptcha/encryption/: mod.rs  murmur.rs
src/captcha/arkose_funcaptcha/headers/: mod.rs
src/captcha/arkose_funcaptcha/imageprocessing/: mod.rs
src/captcha/arkose_funcaptcha/structs/: game_struct.rs  mod.rs  session_structs.rs
src/captcha/hcaptcha/: mod.rs
src/captcha/hcaptcha/challenges/: constants.rs  mod.rs
src/captcha/hcaptcha/challenges/image_label_area_select/: mod.rs  structs.rs
src/captcha/hcaptcha/challenges/text_free_entry/: mod.rs
src/captcha/hcaptcha/fingerprinting/: jwt.rs  mod.rs
src/captcha/hcaptcha/fingerprinting/hsl/: mod.rs
src/captcha/hcaptcha/hashing/: mod.rs
src/captcha/hcaptcha/motion_data/: mod.rs
src/captcha/hcaptcha/sessions/: mod.rs  structs.rs
src/captcha/recaptcha_v3/: mod.rs
src/commons/: mod.rs
src/commons/console/: mod.rs
src/commons/error/: mod.rs
src/commons/utils/: mod.rs
src/tools/generators/: mod.rs
src/tools/generators/github/: mod.rs
src/tools/generators/outlook/: cipher.rs  date.rs  mod.rs
src/tools/generators/roblox_login/: mod.rs
src/tools/generators/roblox_register/: mod.rs
(+10 files in other folders)
