[package]
name = "dortcap"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = {version = "0.9.93", features = ["vendored"]}

[profile.release]
opt-level = "s"
strip = true
rpath = true

[profile.dev]
rpath = true


[dependencies]
rmp3 = { features = ["std", "float"], version = "0.3" }
scc = "2.1.0"
ipgen = "1.0.2"
sha1 = "0.11.0-pre.3"
ndarray = "0.15.6"
reqwest = { version = "0.11.27", features = [
    "serde_json",
    "cookie_store",
    "cookies",
    "socks",
    "brotli",
    "deflate",
    "gzip",
    "json",
    "blocking"
] }
thiserror = "1.0.57"
fmtools = {version = "0.1.2", features = ["obfstr"]}
uuid = { version = "1.7.0", features = ["v4", "fast-rng"]}
image_hasher = {version = "2.0.0" }
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
indexmap = "2.2.3"
serde_json = {version = "1.0.113", features = ["preserve_order"] }
rust-crypto = "0.2.36"
redis = { version = "0.25.2", features = ["aio", "tokio-comp", "connection-manager", "keep-alive"]}
crossterm = "0.27.0"
rand = "0.8.5"
base64 = "0.22.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
md5 = "0.7.0"
hex = "0.4.3"
chrono = "0.4.34"
colored = "2.1.0"
image = { version = "0.25.1", features = ["jpeg"] }
random-string = "1.1.0"
fastrand = "2.0.1"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
warp = "0.3.6"
rocket = { version = "0.5.0", features = ["json"] }
toml = "0.8.10"
ansi-hex-color = "0.1.1"
serde_urlencoded = "0.7.1"
url = "2.5.0"
futures = "0.3.30"
sha2 = "0.11.0-pre.3"
anyhow = "1.0.80"
percent-encoding = "2.3.1"
hamming = "0.1.3"
v8 = "0.91.0"
twox-hash = "1.6.3"
rust-hashcash = { version = "0.3.0", features = ["sha1"] }